# Flint

./: Cargo.toml  build.rs  clawd.service  config.toml.example  flint.service  soul.yaml.example
.cargo/: config.toml
src/: agent.rs  claude.rs  code_intel.rs  config.rs  context.rs  conversation_store.rs  embeddings.rs  heartbeat.rs  jobs.rs  lib.rs  main.rs  memory.rs  observer.rs  setup.rs  signal.rs  signal_daemon.rs  skills.rs  subagents.rs  tasks.rs  tools.rs  tui.rs  tui_code_blocks.rs  tui_git_diff.rs
tests/: agent_test.rs  db_test.rs  memory_test.rs
