[package]
name = "clawd"
version = "0.1.0"
edition = "2021"
description = "Personal AI agent daemon powered by Claude"
license = "MIT"

[lib]
name = "clawd"
path = "src/lib.rs"

[[bin]]
name = "clawd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
qdrant-client = "1.10"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1"
futures = "0.3"
bytes = "1.6"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.26.0"
tokio = { version = "1.38", features = ["full", "test-util"] }
