[package]
name = "flint"
version = "0.1.0"
edition = "2021"
description = "Personal AI agent daemon"
license = "MIT"

[lib]
name = "flint"
path = "src/lib.rs"

[[bin]]
name = "flint"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
duckdb = { version = "1.1", features = ["bundled"] }
dialoguer = "0.11"
dirs = "5"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1"
futures = "0.3"
bytes = "1.6"
async-trait = "0.1"
crossterm = "0.28"
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["crossterm"] }
arboard = "3"
fastembed = "5"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
ureq = "2"
regex = "1.12.3"
streaming-iterator = "0.1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-sequel = "0.3"
ra_ap_syntax = "0.0.323"
rustpython-parser = "0.4.0"
sqlparser = "0.61.0"
sqruff-lib = "0.35.4"
sqruff-lib-core = "0.35.4"

[build-dependencies]
ureq = "2"

[profile.dev]
# Reduce debug info so the linker needs less memory.
# Line numbers are kept (debug = 1); full variable info is omitted.
debug = 1

[dev-dependencies]
tempfile = "3.26.0"
tokio = { version = "1.38", features = ["full", "test-util"] }
